Commit Aula 12-02-2025